# PyStarter

./: 404.html  README.md  about_python.html  comming_soon.html  index.html  links.txt  miths_about_education.html  mkdocs.yml  pyproject.toml  pyproject1.toml  resources.html  sitemap.xml  zen.html
.venv1/: pyvenv.cfg
_stylesheets/: dark_theme.css  fixes.css
batteries/: _ftplib.html  collections.html  contextlib.html  datetime.html  enum.html  example_itertools.py  example_itertoolst.py  functools.html  itertools.html  os_path.html  pprint.html  random.html
bool_logic/: bool.html  bool_expressions.html
dict/: dict.html  dict_methods.html  dict_traversal.html
docs/: about_python.md  comming_soon.md  index.md  miths_about_education.md  resources.md
exceptions/: context_manager.html  context_managers.html  eafp_vs_lbyl.html  exceptions.html  exceptions_handling.html  exceptions_raising.html  handling_exceptions.html  raising_exceptions.html  recap.html  warnings.html
functional_programming/: closure.html  closure.md.old  closures1.html  closures2.html  decorator.html  decorators1.html  decorators2.html  decorators3.html  decorators4.html  decorators5.html  functions_as_objects.html  higher_order_functions.html  intro.html  lambda.html  map_filter.html  people.json  pure_functions.html  recursion.html  recursion1.html  recursion1.md.old  recursion2.html
functions/: functions.html  functions_exprs.html  types_convertion.html
functions3/: call_stack.html  docstrings.html  example_call_stack.py  example_global_nonlocal.py  example_legb.py  example_scope.py  (+5 more)
(+1074 files in other folders)
