[project]
name = "pystarter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ruslan Iskov", email = "ruslan.rv.ua@gmail.com" }
]
dependencies = [
    "mkdocs-material>=9.4.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
